--- a/src/main/webapp/resources/css/custom/common.css
+++ b/src/main/webapp/resources/css/custom/common.css
@@ -163,6 +163,22 @@
     border:#ccc solid 1px;
 }
 
+/* 自定义产品展示 */
+.main-con-product{
+    margin: 0;
+}
+.main-product-list{
+    margin-top: 20px;
+}
+.main-product-list img{
+    width: 100%;
+    height: 200px;
+}
+.main-product-list span{
+    margin-top: 10px;
+}
+
+
 
 /* 自定义底部样式 */
 .custom-footer {
