--- a/src/main/webapp/resources/css/custom/common.css
+++ b/src/main/webapp/resources/css/custom/common.css
@@ -177,8 +177,59 @@
 .main-product-list span{
     margin-top: 10px;
 }
+.img-info h1{
+    font-size: 20px;
+    font-weight: bold;
+    color: #222;
+    border-bottom: 1px dashed #999;
+    padding-bottom: 10px;
+}
+.img-tel{
+    font-size: 30px;
+    font-weight: bold;
+    color: #cc0000;
+}
+.img-tel span{
+    font-size: 20px;
+    color: #333;
+}
+.product-detail{
+    height: 34px;
+    line-height: 34px;
+    border-bottom: 3px solid #cc0000;
+}
+.product-detail h3{
+    width: 100px;
+    height: 34px;
+    line-height: 34px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    text-align: center;
+    background: #cc0000;
+}
+.main-con-text img{
+    /*display: block;*/
+    max-width: 100% !important;
+    height: auto !important;
+}
+.mt30{
+    margin-top: 30px;
+}
 
-
+.copywriting {
+    font-size:13px;
+    line-height:26px;
+}
+.copywriting img {
+    border: 0;
+    max-width: 100%;
+    max-height: 100%;
+    margin: 5px 0px 5px 0px;
+}
+.copywriting p {
+    margin: 0 0 0px;
+}
 
 /* 自定义底部样式 */
 .custom-footer {
